Added tests for movie service